--- a/src/interfaz/MenuSolicitudes.form
+++ b/src/interfaz/MenuSolicitudes.form
@@ -210,7 +210,7 @@
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="4" rowCount="4">
-                    <Column editable="true" title="Fecha de Ekaboracion" type="java.lang.Object"/>
+                    <Column editable="true" title="Fecha de Elaboracion" type="java.lang.Object"/>
                     <Column editable="true" title="Estudiante" type="java.lang.Object"/>
                     <Column editable="true" title="Motivo" type="java.lang.Object"/>
                     <Column editable="true" title="Estatus" type="java.lang.Object"/>
